--- a/web/app/themes/roots/assets/less/app.less
+++ b/web/app/themes/roots/assets/less/app.less
@@ -7,9 +7,36 @@
 @import "variables.less";
 
 .navbar {
-   height: 71px;
+   height: 70px;
    margin-bottom: 0;
    border: 0 none;
+   background: #ffffff;
+}
+
+.nav > li,
+.dropdown {
+   position: static;
+}
+
+.dropdown-menu {
+   width: 100%;
+   height: 60px;
+   line-height: 60px;
+   text-align: center;
+   border: 0 none;
+   background: @gray-lighter;
+   padding: 0;
+
+   .border-radius(0);
+   .box-shadow(none);
+
+   > li {
+      display: inline-block;
+
+      > a {
+         padding: 0 15px;
+      }
+   }
 }
 
 .navbar-brand {
@@ -55,6 +82,7 @@
    position: relative;
    height: 500px;
    overflow: hidden;
+   clear: both;
 
    .background {
       position: absolute;
