--- a/web/app/themes/roots/assets/less/variables.less
+++ b/web/app/themes/roots/assets/less/variables.less
@@ -1,3 +1,22 @@
 @font-family-sans-serif: "Gotham A", "Gotham B", sans-serif;
+@font-family-heading: 'Tungsten A', 'Tungsten B';
 
 @gray-lighter: #e8e9e9;
+@red: #e73e33;
+
+// Page Main Content (typically the content at the top of the page)
+@main-content-bg-color: #e5e5e5;
+
+// Sections
+@section-header-color: @red;
+
+// Dark Section
+@section-dark-bg-color: #262a2e;
+@section-dark-text-color: #a8aaab;
+
+// Light Section
+@section-light-bg-color: #ffffff;
+@section-light-text-color: @red;
+
+// Footer
+@footer-bg-color: @red;
