--- a/web/app/themes/roots/assets/less/mixins.less
+++ b/web/app/themes/roots/assets/less/mixins.less
@@ -1,5 +1,5 @@
 .border-radius(@radius) {
-   -webkit-border-radius: 0;
-   -moz-border-radius: 0;
-   border-radius: 0;
+   -webkit-border-radius: @radius;
+   -moz-border-radius: @radius;
+   border-radius: @radius;
 }
