--- a/web/app/themes/roots/assets/less/variables.less
+++ b/web/app/themes/roots/assets/less/variables.less
@@ -1,5 +1,6 @@
 @font-family-sans-serif: "Gotham A", "Gotham B", sans-serif;
 @font-family-heading: 'Tungsten A', 'Tungsten B';
+@font-size-base: 19px;
 
 @gray-lighter: #e8e9e9;
 @red: #e73e33;
