--- a/web/app/themes/roots/assets/less/app.less
+++ b/web/app/themes/roots/assets/less/app.less
@@ -12,6 +12,7 @@
    border: 0 none;
    background: #ffffff;
    padding: 0 20px;
+   font-size: 16px;
 }
 
 .nav > li,
@@ -56,6 +57,7 @@
 
 .navbar-nav {
    float: right;
+   font-size: 15px;
 
    > li.active {
       .dropdown-menu {
@@ -65,8 +67,9 @@
 
    > li {
       > a {
-         padding: 25px 20px;
+         padding: 0 20px;
          text-transform: uppercase;
+         line-height: 70px;
 
          .caret {
             display: none;
@@ -88,6 +91,11 @@
             font-weight: bold;
          }
       }
+   }
+
+   a {
+      font-size: 15px;
+      .transition(100ms linear all);
    }
 }
 
@@ -124,6 +132,11 @@
    overflow: hidden;
    clear: both;
 
+   h1 {
+      margin-top: 0;
+      font-size: 53px;
+   }
+
    .background {
       position: absolute;
       left: 0;
@@ -132,7 +145,7 @@
       max-width: 100%;
       z-index: 0;
    }
-   
+
    .content {
       display: block;
       height: 100%;
@@ -292,18 +305,7 @@
 }
 
 
-
-/* ==========================================================================
-   Sidebar
-   ========================================================================== */
-
-.sidebar { }
-
-
-
-/* ==========================================================================
-   Posts
-   ========================================================================== */
+// Posts
 
 .hentry header { }
 .hentry time { }
@@ -312,12 +314,7 @@
 .hentry footer { }
 
 
-
-/* ==========================================================================
-   Footer
-   ========================================================================== */
-
-.content-info { }
+// Footer
 
 footer {
    background: @footer-bg-color;
@@ -325,10 +322,10 @@ footer {
    padding-bottom: 50px;
    min-height: 324px;
 
-   &, a {
+   &, a, a:hover {
       color: #fff;
    }
-   
+
    .utility {
       font-family: @font-family-heading;
       font-size: 20px;
@@ -355,24 +352,96 @@ footer {
 }
 
 
-/* ==========================================================================
-   WordPress Generated Classes
-   See: http://codex.wordpress.org/CSS#WordPress_Generated_Classes
-   ========================================================================== */
-
 .aligncenter { display: block; margin: 0 auto; }
 .alignleft { float: left; }
 .alignright { float: right; }
 figure.alignnone { margin-left: 0; margin-right: 0; }
 
+// Media Queries
+// 992px
+@media only screen and (max-width: @screen-md) {
+   .navbar {
+      font-size: 14px;
+   }
 
+   // Footer
+   footer {
+      font-size: 16px;
+      padding: 20px 0;
 
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
+      .utility {
+         .box {
+            padding: 10px 30px;
 
-@media (min-width: @screen-sm-min) { }
+            &.navigation {
+               padding-left: 15px;
+               padding-right: 15px;
+            }
+         }
+      }
+   }
+}
 
-@media (min-width: @screen-md-min) { }
+// 768px
+@media screen and (max-width: @screen-sm) {
 
-@media (min-width: @screen-lg-min) { }
+   .section {
+      padding: 10px;
+   }
+
+   .nav > li,
+   .dropdown {
+      position: relative;
+      clear: both;
+   }
+
+   .dropdown-menu {
+      height: auto;
+      position: relative;
+      text-align: left;
+
+      > li {
+         display: block;
+         float: none;
+
+         > a {
+            padding-left: 40px;
+         }
+      }
+   }
+
+   .navbar {
+      padding-left: 0;
+      padding-right: 0;
+      height: auto;
+   }
+   .container > .navbar-header {
+      margin-left: 0;
+      margin-right: 0;
+   }
+   .navbar-nav {
+      float: none;
+      width: 100%;
+      margin: 0;
+   }
+   .navbar-toggle {
+      margin-top: 18px;
+      margin-right: 0;
+   }
+   
+   .page-parent .featured-image {
+      margin-top: 0;
+   }
+
+   // Featured Image
+   .featured-image {
+      h1 {
+         margin-top: 0;
+         font-size: 30px;
+      }
+
+      .sub-heading {
+         font-size: 16px;
+      }
+   }
+}
