--- a/web/app/themes/roots/assets/less/variables.less
+++ b/web/app/themes/roots/assets/less/variables.less
@@ -4,6 +4,7 @@
 
 @gray-lighter: #e8e9e9;
 @red: #e73e33;
+@dark: #1f252b;
 
 // Page Main Content (typically the content at the top of the page)
 @main-content-bg-color: #e5e5e5;
