Updated dropdown navigation also

--- a/web/app/themes/roots/assets/less/app.less
+++ b/web/app/themes/roots/assets/less/app.less
@@ -123,6 +123,7 @@
 .featured-image {
    position: relative;
    height: 300px;
+   background: #31485e;
 
    &::before {
       content: "";
@@ -141,8 +142,8 @@
       height: 500px;
    }
 
-   .page-parent & {
-      margin-top: 60px;
+   .page-parent &, .page-child & {
+      margin-top: 50px;
    }
 
    overflow: hidden;
