add template for take action page.

--- a/web/app/themes/roots/assets/less/app.less
+++ b/web/app/themes/roots/assets/less/app.less
@@ -293,6 +293,21 @@
    }
 }
 
+.addthis_default_style {
+   margin: 40px 0;
+   .at300m,
+   .at300b,
+   .addthis_counter{
+      display: inline-block!important;
+      float: none!important;
+   }
+
+   .addthis_counter {
+      position: relative;
+      top: -10px;
+   }
+}
+
 /* Gallery Shortcode */
 .gallery-row { padding: 15px 0; }
 
