More updated styles

--- a/web/app/themes/roots/assets/less/app.less
+++ b/web/app/themes/roots/assets/less/app.less
@@ -300,9 +300,7 @@
    }
 
    .section-content {
-      font-weight: 200;
-
-      letter-spacing: 1px;
+      font-weight: normal;
       line-height: 1.6;
    }
 
