--- a/web/app/themes/roots/assets/less/variables.less
+++ b/web/app/themes/roots/assets/less/variables.less
@@ -18,7 +18,7 @@
 
 // Light Section
 @section-light-bg-color: #ffffff;
-@section-light-text-color: @red;
+@section-light-text-color: #444444;
 
 // Footer
 @footer-bg-color: @red;
