Sponsors page styles

--- a/web/app/themes/roots/assets/less/app.less
+++ b/web/app/themes/roots/assets/less/app.less
@@ -549,3 +549,15 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
       }
    }
 }
+
+
+// Donors
+.donor {
+font-size: 14px;
+color:@grey-medium;
+
+.front {border-radius: 1000px;overflow: hidden;display: block;width:25%;float: left;}
+
+.donor-name {font-weight: bold;font-size: 18px;color: @dark;}
+
+}
