add CTA button to home page banner - "update" font for main content area

--- a/web/app/themes/roots/assets/less/variables.less
+++ b/web/app/themes/roots/assets/less/variables.less
@@ -1,5 +1,7 @@
 @font-family-sans-serif: "Gotham A", "Gotham B", sans-serif;
-@font-family-heading: 'Tungsten A', 'Tungsten B';
+// todo change from sans-serif to script font when purchased
+@font-family-script : @font-family-sans-serif;
+@font-family-heading: @font-family-script;
 @font-size-base: 19px;
 
 @gray-lighter: #e8e9e9;
