--- a/web/app/themes/roots/assets/less/app.less
+++ b/web/app/themes/roots/assets/less/app.less
@@ -115,6 +115,19 @@
    }
 }
 
+.btn-red:extend(.btn) {
+   .button-variant(#fff; @red; darken(@red, 10%));
+
+   display: block;
+   max-width: 200px;
+   margin-left: auto;
+   margin-right: auto;
+}
+
+.btn-cta {
+   margin-top: 20px;
+}
+
 // Content
 .content { }
 
@@ -236,7 +249,7 @@
 
    h1 {
       font-weight: 200;
-      font-family: 'Tungsten A', 'Tungsten B';
+      font-family: @font-family-heading;
       text-transform: uppercase;
 
       font-size: 2.65em;
@@ -305,13 +318,14 @@
    }
 }
 .gform_footer {
-   input[type=submit]:extend(.btn) {
+   input[type=submit]:extend(.btn-red) {
       .button-variant(#fff; @red; darken(@red, 10%));
 
       display: block;
       margin-left: auto;
       margin-right: auto;
 
+      max-width: none;
       min-width: 50%;
 
       &, &:hover {
