--- a/web/app/themes/roots/assets/less/app.less
+++ b/web/app/themes/roots/assets/less/app.less
@@ -128,6 +128,13 @@
    margin-top: 20px;
 }
 
+.text-light {
+   font-weight: 200;
+}
+.text-uppercase {
+   text-transform: uppercase;
+}
+
 // Content
 .content { }
 
