--- a/web/app/themes/roots/assets/less/app.less
+++ b/web/app/themes/roots/assets/less/app.less
@@ -256,7 +256,7 @@
 
    h1 {
       font-weight: 200;
-      font-family: @font-family-heading;
+      font-family: @font-family-script;
       text-transform: uppercase;
 
       font-size: 2.65em;
@@ -399,10 +399,17 @@
    }
 
    .col {
-      text-align: center;
+      h3 {
+         font-family: @font-family-heading;
+         color: @red;
+         .text-uppercase;
+      }
       img {
          max-width: 100%;
          .border-radius(50%);
+      }
+      .col-content {
+         font-size: 17px;
       }
    }
 }
